# rust-streak

./: Cargo.toml  Cargo.toml.bak  data.txt  streak.sh
src/: main.rs
