[package]
name = "rust-streak"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
arboard = "3"
